# Xorium-Stealer-Pulsar

./: AbyssNative.cpp  BUILD_GUIDE_VN.md  COMPREHENSIVE_REPORT.md  DEFENSIVE_ANALYSIS.md  GEMINI.md  MemoryLoaders.hpp  README.md  README_EN.md  README_VN.md  REPORT.md  RustRootkit.cpp  RustRootkit.hpp  ULTRA_DEEP_ANALYSIS.md  build.ps1  build.sh  build_log.txt  build_log_final.txt  compile_abyss.bat  obfuscar.xml  obfuscate.ps1  resource.h  resources.rc
shadow-main/: .gitattributes  Cargo.toml  Justfile  README.md  README_VN.md
shadow-main/.cargo/: config.toml
shadow-main/client/: Cargo.toml
shadow-main/client/src/modules/: callback.rs  driver.rs  injection.rs  misc.rs  module.rs  network.rs  process.rs  registry.rs  thread.rs
shadow-main/client/src/utils/: keylogger.rs  mod.rs
shadow-main/crates/common/: Cargo.toml
shadow-main/crates/common/src/: enums.rs  ioctls.rs  structs.rs
shadow-main/crates/shadow-core/: Cargo.toml
shadow-main/crates/shadow-core/src/: antivm.rs  bootkit.rs  driver.rs  error.rs  hvci.rs  injection.rs  lib.rs  misc.rs  module.rs  network.rs  offsets.rs  process.rs  thread.rs
shadow-main/crates/shadow-core/src/callback/: mod.rs  notify_routine.rs  object.rs  registry.rs
shadow-main/crates/shadow-core/src/registry/: callback.rs  mod.rs  (+1 more)
shadow-main/doc/: driver.md  injection.md  process.md  thread.md
shadow-main/driver/: Cargo.toml
shadow-main/driver/src/: allocator.rs  callback.rs  ioctls.rs  lib.rs  util.rs
shadow-main/scripts/: script.ps1
shadow-main/src/: evasion.rs  lib.rs  rootkit.rs  stealth.rs  vm_detect.rs
(+199 files in other folders)
